website/deploy/production/deployment-prod-pool.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snack
spec:
  template:
    spec:
      nodeSelector:
        pool: prod
      tolerations:
      - key: dedicated
        value: prod
        effect: NoSchedule
