website/deploy/production/deployment-replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snack
spec:
  replicas: 2
