website/deploy/production/ingress-spec.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: snack
spec:
  tls:
  - hosts:
    - snack.expo.io
    - snack.expo.dev
    secretName: snack-tls
  rules:
  - host: snack.expo.io
    http:
      paths:
      - backend:
          service:
            name: snack
            port:
              number: 80
        path: /
  - host: snack.expo.dev
    http:
      paths:
      - backend:
          service:
            name: snack
            port:
              number: 80
        path: /
